--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+hyper     = { version = "0.14", features = ["full"] }
+hyper-tls = { version = "0.5.0" }
