--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 serde = { version = "1.0", features = ["derive"] }
 hyper     = { version = "0.14", features = ["full"] }
 hyper-tls = { version = "0.5.0" }
+futures   = "0.3"
