--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+futures   = "0.3"
+tokio     = { version = "1", features = ["full"] }
 hyper     = { version = "0.14", features = ["full"] }
 hyper-tls = { version = "0.5.0" }
-futures   = "0.3"
