--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
+serde      = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
+
 futures   = "0.3"
 tokio     = { version = "1", features = ["full"] }
 hyper     = { version = "0.14", features = ["full"] }
