--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde      = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0" }
+urlencoding = { version = "2.1.0" }
+serde       = { version = "1.0", features = ["derive"] }
+serde_json  = { version = "1.0" }
 
 futures   = "0.3"
 tokio     = { version = "1", features = ["full"] }
