--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+fstrings = "0.2.3"
+
 urlencoding = { version = "2.1.0" }
 serde       = { version = "1.0", features = ["derive"] }
 serde_json  = { version = "1.0" }
